@@ -133,6 +133,20 @@ def _stream_data_to_df(stream: Stream) -> pd.DataFrame:
     return df
 
 
+def _get_bulk(bulk):
+    """ Private function to reformat the bulk """
+    # Convert dataframe to bulk input
+    if bulk is None:
+        return []
+    if isinstance(bulk, pd.DataFrame):
+        cols = list(NSLC) + ["starttime", "endtime"]
+        assert set(cols).issubset(
+            bulk.columns
+        ), f"A bulk dataframe must have the following columns: {cols}"
+        return list(bulk[cols].to_records(index=False))
+    return bulk
+
+
 def stream_bulk_split(st: Stream, bulk: List[waveform_request_type]) -> List[Stream]:
     """
     Split a stream into a list of streams that meet requirements in bulk.
@@ -152,6 +166,7 @@ def stream_bulk_split(st: Stream, bulk: List[waveform_request_type]) -> List[Str
     List of traces, each meeting the corresponding request in bulk.
     """
     # return nothing if empty bulk or stream args
+    bulk = _get_bulk(bulk)
     if not bulk or len(st) == 0:
         return []
 
@@ -159,17 +174,16 @@ def stream_bulk_split(st: Stream, bulk: List[waveform_request_type]) -> List[Str
     sdf = _stream_data_to_df(st)
     # iterate stream, return output
     out = []
-    for b in bulk:
-        assert len(b) == 6, f"{b} is not a valid bulk arg, must have len 6"
-        need = filter_index(sdf, *b)
+    for barg in bulk:
+        assert len(barg) == 6, f"{barg} is not a valid bulk arg, must have len 6"
+        need = filter_index(sdf, *barg)
         traces = [tr for tr, bo in zip(st, need) if bo]
         new_st = obspy.Stream(traces)
-        t1, t2 = UTCDateTime(b[-2]), UTCDateTime(b[-1])
+        t1, t2 = UTCDateTime(barg[-2]), UTCDateTime(barg[-1])
         new = new_st.slice(starttime=t1, endtime=t2)
         if new is None or not len(new):
             out.append(obspy.Stream())
             continue
-        # if len(new) > 1:
         new = merge_traces(new)
         out.append(new)
     assert len(out) == len(bulk), "output is not the same len as stream list"
@@ -467,3 +481,133 @@ def _get_waveclient_from_path(path):
         return get_waveform_client(obsplus.WaveBank(path))
     else:
         return get_waveform_client(obspy.read(str(path)))
+
+
+class _StreamEqualTester:
+    """
+    Simple class for testing if streams are (almost) equal.
+
+    This class is not intended to be used directly, instead use
+    :func:`obsplus.waveforms.utils.assert_stream_almost_equal`.
+    """
+
+    skeys = list(NSLC) + ["sampling_rate", "starttime", "endtime"]
+
+    def __init__(
+        self,
+        basic_stats: bool = True,
+        atol: float = 1e-05,
+        rtol: float = 1e-08,
+        equal_nan: bool = True,
+        allow_off_by_one: bool = False,
+    ):
+        self.basic_stats = basic_stats
+        self.atol = atol
+        self.rtol = rtol
+        self.equal_nan = equal_nan
+        self.allow_off_by_one = allow_off_by_one
+
+    def _assert_stats_equal(self, tr1, tr2):
+        """ Assert that the stats dicts are almost equal. """
+        skeys, basic_stats = self.skeys, self.basic_stats
+        sta1 = {x: tr1.stats[x] for x in skeys} if basic_stats else tr1.stats
+        sta2 = {x: tr2.stats[x] for x in skeys} if basic_stats else tr2.stats
+        if not sta1 == sta2:
+            stats_equal = False
+            # see if the start and end times are within one sample rate
+            if self.allow_off_by_one:
+                times = ("starttime", "endtime")
+                sta1_new = {i: v for i, v in sta1.items() if i not in times}
+                sta2_new = {i: v for i, v in sta2.items() if i not in times}
+                if sta1["sampling_rate"] == sta2["sampling_rate"]:
+                    sr = sta1["sampling_rate"]
+                    t1_diff = abs(sta1["starttime"] - sta2["starttime"])
+                    t2_diff = abs(sta1["endtime"] - sta2["starttime"])
+                    if t1_diff < sr and t2_diff < sr and sta1_new == sta2_new:
+                        stats_equal = True
+            if not stats_equal:
+                msg = f"Stats are not the same for the traces: \n{sta1}\n{sta2}"
+                assert 0, msg
+
+    def _assert_arrays_almost_equal(self, tr1, tr2):
+        """ Assert that the data arrays of the traces are almost equal. """
+        ars = sorted([tr1.data, tr2.data], key=lambda x: len(x))
+        kwargs = dict(atol=self.atol, rtol=self.rtol, equal_nan=self.equal_nan)
+        close = np.allclose(ars[0], ars[1], **kwargs)
+        if not close and self.allow_off_by_one:
+            # If the arrays are within 2 samples of each other in length
+            if abs(len(ars[0]) - len(ars[1])) <= 2:
+                sub_ar = ars[0][1:-1]
+                # slide the smaller array over the larger, return true if found
+                for i in range(len(ars[1]) - len(ars[0]) + 3):
+                    if np.allclose(sub_ar, ars[1][i : i + len(sub_ar)], **kwargs):
+                        close = True
+                        break
+        assert close, "Data of traces are not nearly equal"
+
+    def __call__(self, st1, st2):
+        """
+        Assert that two streams are almost equal else raise AssertionError.
+
+        Parameters
+        ----------
+        st1
+            The first stream
+        st2
+            The second stream
+        """
+        st1.sort(), st2.sort()
+        if len(st1) != len(st2):
+            assert 0, "streams do not have the same number of traces"
+        # iterate each trace and raise if stats and arrays are not almost equal.
+        for tr1, tr2 in zip(st1, st2):
+            self._assert_stats_equal(tr1, tr2)
+            self._assert_arrays_almost_equal(tr1, tr2)
+
+
+def assert_streams_almost_equal(
+    st1: obspy.Stream,
+    st2: obspy.Stream,
+    basic_stats: bool = True,
+    atol: float = 1e-05,
+    rtol: float = 1e-08,
+    equal_nan: bool = True,
+    allow_off_by_one: bool = False,
+) -> None:
+    """
+    Assert that two streams are almost equal else raise helpful exceptions.
+
+    Parameters
+    ----------
+    st1
+        The first stream
+    st2
+        The second stream
+    basic_stats
+        If True, only compare basic stats of the streams including:
+        network, station, location, channel, starttime, endtime
+    atol
+        The absolute tolerance parameter
+    rtol
+        The relative tolerance parameter
+    equal_nan
+        If True evaluate NaNs as equal
+    allow_off_by_one
+        If True, allow the arrays and time alignments to be off by one sample.
+
+    Notes
+    -------
+    See numpy.allclose for description of atol and rtol paramter.
+
+    Raises
+    ------
+    AssertionError if streams are not about equal.
+    """
+    kwargs = dict(
+        basic_stats=basic_stats,
+        atol=atol,
+        rtol=rtol,
+        equal_nan=equal_nan,
+        allow_off_by_one=allow_off_by_one,
+    )
+    _StreamEqualTester(**kwargs)(st1, st2)
