@@ -20,6 +20,10 @@ obsplus master:
     * Deprecate get_nslc_series in favor of get_seed_id_series (#120).
   - obsplus.events
     * Dataframe_to_inventory can now fetch NRL responses (#125).
+  - obsplus.waveforms
+    * Added assert_streams_almost_equal method (see #128).
+    * The function obsplus.waveforms.stream_split_bulk now has more flexible
+      inputs (see #128).
 
 obsplus 0.0.2:
   - obsplus.bank
